# adau-spi

./: ADAU1462.dspproj  ADAU1462_DRV  ADAU1466_DRV  CMakeLists.txt  README.md
ADAU-DRV/: adau-drv.bb
ADAU-DRV/files/adau-drv/: .ADAU1466_DRV.c.swp  .ADAU1466_DRV.h.swp  .spi.c.swp  ADAU1462_DRV.c  ADAU1462_IC_1.h  ADAU1462_IC_1_PARAM.h  ADAU1462_IC_1_REG.h  ADAU1466_DRV.c  ADAU1466_DRV.h  Makefile  a.out  spi.c
board/smps-es/: ADAU1462.dspproj  ADAU1462_IC_1.h  ADAU1462_IC_1_PARAM.h  ADAU1462_IC_1_REG.h
board/zepp-es/: ADAU1462.dspproj  ADAU1462_IC_1.h  ADAU1462_IC_1_PARAM.h  ADAU1462_IC_1_REG.h
src/: .ADAU1466_IC_1.h.swp  ADAU1462_IC_1.h  CMakeLists.txt  SigmaStudioFW.h  adau1462.c  adau1462.h  spi.c  spi.h
